<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg4">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_ThongTin"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:textSize="30dp"
        android:textColor="#F30C0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etxtemail"
        android:layout_width="384dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:alpha="0.7"
        android:background="@drawable/button"
        android:hint="@string/hint_email"
        android:padding="10dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtSdt" />

    <EditText
        android:id="@+id/etxtSdt"
        android:layout_width="384dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:alpha="0.7"
        android:background="@drawable/button"
        android:hint="@string/hint_SDT"
        android:padding="10dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtHoten" />

    <EditText
        android:id="@+id/etxtHoten"
        android:layout_width="384dp"
        android:background="@drawable/button"
        android:alpha="0.7"
         android:textColorHint="#FFFFFF"
        android:layout_height="47dp"
        android:layout_marginTop="72dp"
        android:padding="10dp"
        android:hint="@string/hint_Hoten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:text="@string/text_Confirm"
        android:textColor="#000A23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtemail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textSize="20dp"
        android:padding="10dp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>